--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^3.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +35,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/images/icons-menu.png
+    - assets/images/group 822.png
+    - assets/images/group 646.png
+    - assets/images/Group 1.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
